fix: overflowY in home page bug fixed

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -248,6 +248,7 @@ article {
 
 .cards {
   display: flex;
+  width: 200px;
   max-width: 200px;
   max-height: 180px;
   flex-direction: column;
@@ -266,11 +267,14 @@ article {
 .card-img {
   width: 100%;
   height: 60%;
+  max-height: 100px;
+  overflow: hidden;
 }
 
 .cards img {
   width: 100%;
   height: 100%;
+  max-height: 100px;
   object-fit: cover;
   border-radius: 20px 20px 0 0;
 }
@@ -468,6 +472,8 @@ article {
   }
 
   .cards {
+    min-width: 200px;
+    min-height: 180px;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
